[tool.poetry]
name = "my_krml_14191732"
version = "0.1.0"
description = "A package for the assignment 2 - Advanced Machine Learning 2023"
authors = ["my_krml_14191732"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.13"
pandas = "^1.3.3"
scikit-learn = "1.2.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
